# ks-scmms-gui

./: .gitignore  CMakeLists.txt  build_all.sh
buildrpm/: Readme  build.sh  ks-scmms-gui  ks-scmms-gui.spec  mock-temp-ky3.2.cfg  mock-temp-ky3.3.cfg  socat  socat.aarch64
buildrun/: build_all.sh  generate-run.sh  ks-run.sh
data/: CMakeLists.txt  ks-scmms-gui.desktop.in  resources.qrc
extract-libs/: deps-libs.txt  extract-libs.py
src/: CMakeLists.txt  bridge.cpp  bridge.h  customwidget.cpp  customwidget.h  customwidget.ui  main.cpp  mask-widget.cpp  mask-widget.h  mousedeal.cpp  mousedeal.h  sstoolbutton.cpp  sstoolbutton.h  titlebar.cpp  titlebar.h  webpage.cpp  webpage.h  widget.cpp  widget.h  widget.ui
